--- a/AGXUnreal.uplugin
+++ b/AGXUnreal.uplugin
@@ -84,6 +84,10 @@
 		{
 			"Name": "EditorScriptingUtilities",
 			"Enabled": true
+		},
+		{
+			"Name": "ProceduralMeshComponent",
+			"Enabled": true
 		}
 	]
 }
