--- a/AGXUnreal.uplugin
+++ b/AGXUnreal.uplugin
@@ -1,7 +1,7 @@
 {
 	"FileVersion": 3,
-	"Version": 27,
-	"VersionName": "2.1.0",
+	"Version": 28,
+	"VersionName": "2.2.0-dev",
 	"FriendlyName": "AGX Dynamics for Unreal",
 	"Description": "Integration of AGX Dynamics, a professional multi-purpose physics engine for simulators, Virtual Reality (VR), engineering, large scale granular simulations and more, into Unreal Engine.",
 	"Category": "Physics",
